fix logs directory